# NeuXelec

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  NeuXelec_setup.iss  NeuXelec_windows.spec  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: RELEASING.md
resources/ui/: MainWindow.ui
scripts/: run_neuxelec.py
src/neuxelec/: __init__.py  app.py  coregistration.py  logging_config.py  main_window.py  project_io.py  siscom.py  state.py  updater.py
src/neuxelec/controllers/: electrodes.py  menu.py
src/neuxelec/pages/: files_page.py  oblique_slice_page.py  reconstruction_page.py  view3d.py  view3d_camera.py  view3d_export.py  view3d_fullscreen.py  view3d_markers.py  view3d_mni.py  view3d_slice_planes.py
src/neuxelec/ui/: brain_render_dialog.py  context_menus.py  edit_contact_dialog.py  export_coordinates_dialog.py  export_coordinates_dialog_with_cartool.py  marker_dialog.py  marker_list_dialog.py  mni_parcellation_table_dialog.py  mode_dialog.py  mri_filename_label_dialog.py  neuxelec_color_dialog.py  neuxelec_file_assignment_dialog.py  neuxelec_message_dialog.py  open_project_dialog.py  overlay_viewer.py  page_loading_overlay.py  pial_coreg_dialog.py  project_loading_window.py  pyvista_quick_tools.py  slice_quick_tools.py  startup_dialog.py
src/neuxelec/utils/: electrode_geometry.py  electrodes_ref.json  electrodes_ref.txt  format_convert.py  imaging.py  mni_coordinates.py  mni_electrodes_io.py  pet_visualization.py  qt_helpers.py  resources.py  siscom_visualization.py  t1_conform.py  ui_loader.py
src/neuxelec/workers/: __init__.py  coreg_workers.py  mesh_workers.py  siscom_worker.py
tests/: test_electrode_geometry.py  test_logging_config.py  test_project_io.py  test_updater.py
